# ogdf-py

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build-publish.yml  ci.yml
coverage/: index.html
demos/: README.md  _common.py  algorithms_visual.py  gallery.py  generators_zoo.py  io_roundtrip.py  layouts_gallery.py  run_all.py  styling_showcase.py
docs/: coverage.md  getting-started.md  index.md
gallery/: index.html
getting-started/: index.html
scripts/: bootstrap_ogdf.py  bootstrap_ogdf.sh
search/: search_index.json
src/ogdf/: __init__.py  _core.cpp  bind_algorithms.cpp  bind_generators.cpp  bind_graph.cpp  bind_io.cpp  bind_layouts.cpp  bindings.h
tests/: test_algorithms.py  test_generators.py  test_layouts.py  test_ogdf.py  test_styling.py
